--- a/docs/manifest.json
+++ b/docs/manifest.json
@@ -7,8 +7,13 @@
   "start_url": "./tablet.html",
   "icons": [
     {
-      "src": "./icon.png",
+      "src": "./wb_icon_192.png",
       "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./wb_icon_512.png",
+      "sizes": "512x512",
       "type": "image/png"
     }
   ]
